bookinfo/04_fault_injection/istio-ratings-v1-inject-delay.yaml
# Add a delay of 2 seconds to all HTTP requests to v1 of the ratings service.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: bookinfo
spec:
  hosts:
  - ratings.bookinfo.svc.cluster.local
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 2s
    route:
    - destination:
        host: ratings.bookinfo.svc.cluster.local
        subset: v1
